--- a/debian/rules
+++ b/debian/rules
@@ -27,7 +27,8 @@ endif
 	--http-client-body-temp-path=/var/lib/nginx/body --http-proxy-temp-path=/var/lib/nginx/proxy \
 	--http-fastcgi-temp-path=/var/lib/nginx/fastcgi --with-http_stub_status_module \
 	--with-http_flv_module --with-http_ssl_module --with-http_dav_module \
-    --with-http_realip_module --add-module=$(CURDIR)/debian/nginx-upstream-fair 
+    --with-http_realip_module --add-module=$(CURDIR)/debian/nginx-upstream-fair \
+		--add-module=$(CURDIR)/debian/nginx-accesskey-2.0.3
 
 build: config.status
 	$(MAKE) build
