--- a/debian/rules
+++ b/debian/rules
@@ -32,7 +32,8 @@ endif
     --with-http_realip_module --add-module=$(CURDIR)/debian/nginx-upstream-fair \
 		--add-module=$(CURDIR)/debian/nginx-accesskey-2.0.3 \
 		--add-module=$(CURDIR)/debian/nginx-ey-balancer-090206 \
-		--add-module=$(CURDIR)/debian/nginx-geoip-0.1
+		--add-module=$(CURDIR)/debian/nginx-geoip-0.1 \
+		--add-module=$(CURDIR)/debian/nginx_uploadprogress_module
 
 build: config.status
 	$(MAKE) build
