New package version 0.6.35-bbox1

--- a/debian/control
+++ b/debian/control
@@ -1,14 +1,11 @@
 Source: nginx
 Section: web
 Priority: optional
-Maintainer: Ubuntu MOTU Developers <ubuntu-motu@lists.ubuntu.com>
+Maintainer: John Leach <john@brightbox.co.uk>
 XSBC-Original-Maintainer: Jose Parrella <bureado@debian.org>
-Uploaders: Fabio Tranchitella <kobold@debian.org>
 Build-Depends: debhelper (>= 5), autotools-dev, libpcre3-dev, zlib1g-dev, libssl-dev
 Standards-Version: 3.8.0
 Homepage: http://nginx.net
-Vcs-Svn: svn://svn.debian.org/svn/collab-maint/deb-maint/nginx/trunk
-Vcs-Browser: http://svn.debian.org/wsvn/collab-maint/deb-maint/nginx/trunk
 
 Package: nginx
 Architecture: any
