--- a/debian/rules
+++ b/debian/rules
@@ -29,7 +29,8 @@ endif
 	--http-client-body-temp-path=/var/lib/nginx/body --http-proxy-temp-path=/var/lib/nginx/proxy \
 	--http-fastcgi-temp-path=/var/lib/nginx/fastcgi --with-http_stub_status_module \
 	--with-http_flv_module --with-http_ssl_module --with-http_dav_module \
-    --with-http_realip_module --add-module=$(CURDIR)/debian/nginx-upstream-fair \
+	--with-mail --with-mail_ssl_module \
+	--with-http_realip_module --add-module=$(CURDIR)/debian/nginx-upstream-fair \
 		--add-module=$(CURDIR)/debian/nginx-accesskey-2.0.3 \
 		--add-module=$(CURDIR)/debian/nginx-ey-balancer-090206 \
 		--add-module=$(CURDIR)/debian/nginx-geoip-0.1 \
