--- a/debian/rules
+++ b/debian/rules
@@ -73,7 +73,7 @@ binary-arch: install
 	dh_testroot
 	dh_installchangelogs CHANGES
 	dh_installdocs
-	dh_installinit -r --no-start
+	dh_installinit -r --no-start --init-script=nginx
 	dh_installman debian/nginx.1
 	dh_installlogrotate
 	dh_link
